// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UI component interactions and snapshots > Alert snapshot 1`] = `
<DocumentFragment>
  <div
    class="relative w-full rounded-lg border px-4 py-3 text-sm grid has-[>svg]:grid-cols-[calc(var(--spacing)*4)_1fr] grid-cols-[0_1fr] has-[>svg]:gap-x-3 gap-y-0.5 items-start [&>svg]:size-4 [&>svg]:translate-y-0.5 [&>svg]:text-current bg-card text-card-foreground"
    data-slot="alert"
    role="alert"
  >
    <div
      class="col-start-2 line-clamp-1 min-h-4 font-medium tracking-tight"
      data-slot="alert-title"
    >
      Heads up!
    </div>
    <div
      class="text-muted-foreground col-start-2 grid justify-items-start gap-1 text-sm [&_p]:leading-relaxed"
      data-slot="alert-description"
    >
      Details here.
    </div>
  </div>
</DocumentFragment>
`;

exports[`UI component interactions and snapshots > Aspect ratio snapshot 1`] = `
<DocumentFragment>
  <div
    style="width: 200px;"
  >
    <div
      data-radix-aspect-ratio-wrapper=""
      style="position: relative; width: 100%; padding-bottom: 56.25%;"
    >
      <div
        data-slot="aspect-ratio"
        style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px;"
      >
        <img
          alt="Preview"
          src="https://placehold.co/300x200"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UI component interactions and snapshots > Breadcrumb renders segments 1`] = `
<DocumentFragment>
  <nav
    aria-label="breadcrumb"
    data-slot="breadcrumb"
  >
    <ol
      class="text-muted-foreground flex flex-wrap items-center gap-1.5 text-sm break-words sm:gap-2.5"
      data-slot="breadcrumb-list"
    >
      <li
        class="inline-flex items-center gap-1.5"
        data-slot="breadcrumb-item"
      >
        <a
          class="hover:text-foreground transition-colors"
          data-slot="breadcrumb-link"
          href="#"
        >
          Home
        </a>
      </li>
      <li
        aria-hidden="true"
        class="[&>svg]:size-3.5"
        data-slot="breadcrumb-separator"
        role="presentation"
      >
        <svg
          class="lucide lucide-chevron-right"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </li>
      <li
        class="inline-flex items-center gap-1.5"
        data-slot="breadcrumb-item"
      >
        <span
          aria-current="page"
          aria-disabled="true"
          class="text-foreground font-normal"
          data-slot="breadcrumb-page"
          role="link"
        >
          Library
        </span>
      </li>
      <span
        aria-hidden="true"
        class="flex size-9 items-center justify-center"
        data-slot="breadcrumb-ellipsis"
        role="presentation"
      >
        <svg
          class="lucide lucide-ellipsis size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="1"
          />
          <circle
            cx="19"
            cy="12"
            r="1"
          />
          <circle
            cx="5"
            cy="12"
            r="1"
          />
        </svg>
        <span
          class="sr-only"
        >
          More
        </span>
      </span>
    </ol>
  </nav>
</DocumentFragment>
`;

exports[`UI component interactions and snapshots > Card snapshot 1`] = `
<DocumentFragment>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 border"
    data-slot="card"
  >
    <div
      class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-1.5 px-6 pt-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6"
      data-slot="card-header"
    >
      <h4
        class="leading-none"
        data-slot="card-title"
      >
        Title
      </h4>
      <p
        class="text-muted-foreground"
        data-slot="card-description"
      >
        Description
      </p>
      <div
        class="col-start-2 row-span-2 row-start-1 self-start justify-self-end"
        data-slot="card-action"
      >
        <button
          class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-8 gap-1.5 px-3 has-[>svg]:px-2.5"
          data-slot="button"
        >
          Action
        </button>
      </div>
    </div>
    <div
      class="px-6 [&:last-child]:pb-6"
      data-slot="card-content"
    >
      Body
    </div>
    <div
      class="flex items-center px-6 pb-6 [.border-t]:pt-6"
      data-slot="card-footer"
    >
      Footer
    </div>
  </div>
</DocumentFragment>
`;

exports[`UI component interactions and snapshots > Chart snapshot 1`] = `
<DocumentFragment>
  <div
    class="[&_.recharts-cartesian-axis-tick_text]:fill-muted-foreground [&_.recharts-cartesian-grid_line[stroke='#ccc']]:stroke-border/50 [&_.recharts-curve.recharts-tooltip-cursor]:stroke-border [&_.recharts-polar-grid_[stroke='#ccc']]:stroke-border [&_.recharts-radial-bar-background-sector]:fill-muted [&_.recharts-rectangle.recharts-tooltip-cursor]:fill-muted [&_.recharts-reference-line_[stroke='#ccc']]:stroke-border flex aspect-video justify-center text-xs [&_.recharts-dot[stroke='#fff']]:stroke-transparent [&_.recharts-layer]:outline-hidden [&_.recharts-sector]:outline-hidden [&_.recharts-sector[stroke='#fff']]:stroke-transparent [&_.recharts-surface]:outline-hidden h-32 w-64"
    data-chart="chart-r5"
    data-slot="chart"
  >
    <style>
      
 [data-chart=chart-r5] {
  --color-visitors: #f00;
}


.dark [data-chart=chart-r5] {
  --color-visitors: #f00;
}

    </style>
    <div
      data-recharts-responsive-container="true"
      height="400"
      width="100%"
    />
  </div>
</DocumentFragment>
`;

exports[`UI component interactions and snapshots > Form renders field and message 1`] = `
<DocumentFragment>
  <form>
    <div
      class="grid gap-2"
      data-slot="form-item"
    >
      <label
        class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive"
        data-error="false"
        data-slot="form-label"
        for=":rp:-form-item"
      >
        Email
      </label>
      <input
        aria-describedby=":rp:-form-item-description"
        aria-invalid="false"
        class="font-robot border-input file:text-foreground placeholder:text-muted-foreground dark:placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground flex h-9 w-full min-w-0 border bg-input-background text-foreground dark:bg-input dark:text-foreground px-3 py-1 text-base transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-black/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive"
        data-slot="form-control"
        id=":rp:-form-item"
        name="email"
        placeholder="you@example.com"
        value=""
      />
      <p
        class="text-muted-foreground text-sm"
        data-slot="form-description"
        id=":rp:-form-item-description"
      >
        We will never share your email.
      </p>
    </div>
  </form>
</DocumentFragment>
`;

exports[`UI component interactions and snapshots > Input OTP renders slots 1`] = `
<DocumentFragment>
  <noscript />
  <div
    class="flex items-center gap-2 has-disabled:opacity-50"
    data-input-otp-container="true"
    style="position: relative; cursor: text; user-select: none; pointer-events: none; --root-height: 0px;"
  >
    <div
      class="flex items-center gap-1"
      data-slot="input-otp-group"
    >
      <div
        aria-hidden="true"
        class="data-[active=true]:border-ring data-[active=true]:ring-ring/50 data-[active=true]:aria-invalid:ring-destructive/20 dark:data-[active=true]:aria-invalid:ring-destructive/40 aria-invalid:border-destructive data-[active=true]:aria-invalid:border-destructive dark:bg-input/30 border-input relative flex h-9 w-9 items-center justify-center border-y border-r text-sm bg-input-background transition-all outline-none first:rounded-l-md first:border-l last:rounded-r-md data-[active=true]:z-10 data-[active=true]:ring-[3px]"
        data-active="false"
        data-slot="input-otp-slot"
        role="presentation"
      >
        1
      </div>
      <div
        aria-hidden="true"
        class="data-[active=true]:border-ring data-[active=true]:ring-ring/50 data-[active=true]:aria-invalid:ring-destructive/20 dark:data-[active=true]:aria-invalid:ring-destructive/40 aria-invalid:border-destructive data-[active=true]:aria-invalid:border-destructive dark:bg-input/30 border-input relative flex h-9 w-9 items-center justify-center border-y border-r text-sm bg-input-background transition-all outline-none first:rounded-l-md first:border-l last:rounded-r-md data-[active=true]:z-10 data-[active=true]:ring-[3px]"
        data-active="false"
        data-slot="input-otp-slot"
        role="presentation"
      >
        2
      </div>
    </div>
    <div
      data-slot="input-otp-separator"
      role="separator"
    >
      <svg
        class="lucide lucide-minus"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 12h14"
        />
      </svg>
    </div>
    <div
      class="flex items-center gap-1"
      data-slot="input-otp-group"
    >
      <div
        aria-hidden="true"
        class="data-[active=true]:border-ring data-[active=true]:ring-ring/50 data-[active=true]:aria-invalid:ring-destructive/20 dark:data-[active=true]:aria-invalid:ring-destructive/40 aria-invalid:border-destructive data-[active=true]:aria-invalid:border-destructive dark:bg-input/30 border-input relative flex h-9 w-9 items-center justify-center border-y border-r text-sm bg-input-background transition-all outline-none first:rounded-l-md first:border-l last:rounded-r-md data-[active=true]:z-10 data-[active=true]:ring-[3px]"
        data-active="false"
        data-slot="input-otp-slot"
        role="presentation"
      >
        3
      </div>
      <div
        aria-hidden="true"
        class="data-[active=true]:border-ring data-[active=true]:ring-ring/50 data-[active=true]:aria-invalid:ring-destructive/20 dark:data-[active=true]:aria-invalid:ring-destructive/40 aria-invalid:border-destructive data-[active=true]:aria-invalid:border-destructive dark:bg-input/30 border-input relative flex h-9 w-9 items-center justify-center border-y border-r text-sm bg-input-background transition-all outline-none first:rounded-l-md first:border-l last:rounded-r-md data-[active=true]:z-10 data-[active=true]:ring-[3px]"
        data-active="false"
        data-slot="input-otp-slot"
        role="presentation"
      >
        4
      </div>
    </div>
    <div
      style="position: absolute; inset: 0; pointer-events: none;"
    >
      <input
        autocomplete="one-time-code"
        class="disabled:cursor-not-allowed"
        data-input-otp="true"
        data-slot="input-otp"
        inputmode="numeric"
        maxlength="4"
        style="position: absolute; inset: 0; width: 100%; height: 100%; display: flex; text-align: left; opacity: 1; color: transparent; pointer-events: all; background: transparent; caret-color: transparent; border: 0px solid transparent; outline: 0 solid transparent; box-shadow: none; line-height: 1; letter-spacing: -.5em; font-family: monospace; font-variant-numeric: tabular-nums;"
        value="1234"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`UI component interactions and snapshots > Resizable snapshot 1`] = `
<DocumentFragment>
  <div
    class="flex h-full w-full data-[panel-group-direction=vertical]:flex-col"
    data-panel-group=""
    data-panel-group-direction="horizontal"
    data-panel-group-id=":r13:"
    data-slot="resizable-panel-group"
    style="display: flex; flex-direction: row; height: 100%; overflow: hidden; width: 100%;"
  >
    <div
      class=""
      data-panel=""
      data-panel-group-id=":r13:"
      data-panel-id=":r14:"
      data-panel-size="1.0"
      data-slot="resizable-panel"
      id=":r14:"
      style="flex-basis: 0px; flex-grow: 1; flex-shrink: 1; overflow: hidden;"
    >
      <div>
        Panel A
      </div>
    </div>
    <div
      class="bg-border focus-visible:ring-ring relative flex w-px items-center justify-center after:absolute after:inset-y-0 after:left-1/2 after:w-1 after:-translate-x-1/2 focus-visible:ring-1 focus-visible:ring-offset-1 focus-visible:outline-hidden data-[panel-group-direction=vertical]:h-px data-[panel-group-direction=vertical]:w-full data-[panel-group-direction=vertical]:after:left-0 data-[panel-group-direction=vertical]:after:h-1 data-[panel-group-direction=vertical]:after:w-full data-[panel-group-direction=vertical]:after:-translate-y-1/2 data-[panel-group-direction=vertical]:after:translate-x-0 [&[data-panel-group-direction=vertical]>div]:rotate-90"
      data-panel-group-direction="horizontal"
      data-panel-group-id=":r13:"
      data-panel-resize-handle-enabled="true"
      data-panel-resize-handle-id=":r15:"
      data-resize-handle=""
      data-resize-handle-state="inactive"
      data-slot="resizable-handle"
      role="separator"
      style="user-select: none;"
      tabindex="0"
    >
      <div
        class="bg-border z-10 flex h-4 w-3 items-center justify-center rounded-xs border"
      >
        <svg
          class="lucide lucide-grip-vertical size-2.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="9"
            cy="12"
            r="1"
          />
          <circle
            cx="9"
            cy="5"
            r="1"
          />
          <circle
            cx="9"
            cy="19"
            r="1"
          />
          <circle
            cx="15"
            cy="12"
            r="1"
          />
          <circle
            cx="15"
            cy="5"
            r="1"
          />
          <circle
            cx="15"
            cy="19"
            r="1"
          />
        </svg>
      </div>
    </div>
    <div
      class=""
      data-panel=""
      data-panel-group-id=":r13:"
      data-panel-id=":r16:"
      data-panel-size="1.0"
      data-slot="resizable-panel"
      id=":r16:"
      style="flex-basis: 0px; flex-grow: 1; flex-shrink: 1; overflow: hidden;"
    >
      <div>
        Panel B
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UI component interactions and snapshots > Separator snapshot 1`] = `
<DocumentFragment>
  <div
    class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px my-2"
    data-orientation="horizontal"
    data-slot="separator-root"
    role="none"
  />
</DocumentFragment>
`;

exports[`UI component interactions and snapshots > Skeleton snapshot 1`] = `
<DocumentFragment>
  <div
    class="bg-accent animate-pulse rounded-md h-4 w-24"
    data-slot="skeleton"
  />
</DocumentFragment>
`;

exports[`UI component interactions and snapshots > Sonner toaster snapshot 1`] = `
<DocumentFragment>
  <div
    class="toaster group"
    data-sonner-toaster="true"
    position="bottom-right"
    style="--normal-bg: var(--popover); --normal-text: var(--popover-foreground); --normal-border: var(--border);"
    theme="light"
  />
</DocumentFragment>
`;
